Convert circles example to pure Swift

--- a/Examples/Circles/Circles/Mac/Base.lproj/Main.storyboard
+++ b/Examples/Circles/Circles/Mac/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="8121.17" systemVersion="14D136" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="8152.3" systemVersion="14D136" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="8121.17"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="8152.3"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
@@ -691,7 +691,7 @@
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
-                            <customView translatesAutoresizingMaskIntoConstraints="NO" id="WR9-db-iJh" customClass="CirclesView">
+                            <customView translatesAutoresizingMaskIntoConstraints="NO" id="WR9-db-iJh" customClass="CirclesView" customModule="Circles">
                                 <rect key="frame" x="20" y="20" width="440" height="440"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="WR9-db-iJh" secondAttribute="height" multiplier="1:1" id="3Iq-xt-Ch2"/>
